<resources>
    <!-- Locations -->
    <string name="app_name">My Fire Hydrant</string>
    <string name="city_taipei">台北</string>
    <string name="city_new_taipei">新北</string>
    <string name="shang_chun">三重</string>
    <string name="chung_ho">中和</string>
    <string name="chung_shan">中山</string>
    <string name="chung_zheng">中正</string>
    <string name="shin_yi">信義</string>
    <string name="nay_hu">內湖</string>
    <string name="bei_tou">北投</string>
    <string name="nan_gang">南港</string>
    <string name="shih_lin">士林</string>
    <string name="da_tong">大同</string>
    <string name="da_an">大安</string>
    <string name="wen_shan">文山</string>
    <string name="shin_dien">新店</string>
    <string name="sung_shan">松山</string>
    <string name="yong_ho">永和</string>
    <string name="shi_zi">汐止</string>
    <string name="wan_hua">萬華</string>
    <string name="unknown_location">未知的地點</string>

    <!-- Data UI -->
    <string name="yes">\u25EF</string>
    <string name="maybe">\u25b3</string>
    <string name="no">\u2573</string>

    <!-- Events -->
    <string name="network_error">網路異常，請檢查你的網路連線狀態</string>
    <string name="first_launch_msg">第一次啟動的朋友你好\n以下是使用小技巧：\n1. 下方橫欄點開可顯示周圍消防栓\n2. 長按定位鈕可以更改地區\n3. 長按下方消防栓可在地圖前往</string>
    <string name="first_launch_button_text">我知道了</string>
    <string name="permission_not_grant">要取得裝置位置權限後才能使用呦～</string>
    <string name="shop_detail_invalid_id_msg">哎呀，有什麼出錯了</string>
</resources>
